[package]
name = "authz-stargate"
version = "0.1.0"
authors = ["tokenize-x"]
edition = "2021"

exclude = ["authz-stargate.wasm", "checksums.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
thiserror.workspace = true
cosmwasm-std.workspace = true
cw2.workspace = true
cosmwasm-schema.workspace = true
tx-wasm-sdk.workspace = true
