[package]
name = "dex"
version = "0.1.0"
authors = ["tokenize-x"]
edition = "2021"

exclude = [
    "dex.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
thiserror.workspace = true
tx-wasm-sdk.workspace = true
cosmwasm-schema.workspace = true
cw-ownable.workspace = true
